// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProducts Saga Deberia disparar la accion productsLoaded si el response vino bien 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getProducts Saga Deberia disparar la accion productsLoaded si el response vino bien 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://localhost:9000/api/items?q=perros&limit=4",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`getProducts Saga Deberia disparar la accion productsLoadingError si hubo errores 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [],
    "selector": [Function],
  },
  "type": "SELECT",
}
`;

exports[`getProducts Saga Deberia disparar la accion productsLoadingError si hubo errores 2`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      "http://localhost:9000/api/items?q=perros&limit=4",
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
